PyFormula/parser/gen/FormulaParser.py
# Generated from C:/Users/Qishen/Desktop/projects/FormulaCore/PyFormula/parser\Formula.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing import TextIO
import sys




class FormulaParser ( Parser ):

    grammarFileName = "Formula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'domain'", "'model'", "'transform'", 
                     "'system'", "'includes'", "'extends'", "'of'", "'returns'", 
                     "'at'", "'machine'", "'is'", "'no'", "'new'", "'fun'", 
                     "'inj'", "'bij'", "'sur'", "'any'", "'sub'", "'count'", 
                     "'ensures'", "'requires'", "'conforms'", "'some'", 
                     "'atleast'", "'atmost'", "'partial'", "'initially'", 
                     "'next'", "'property'", "'boot'", "'import'", "'from'", 
                     "'as'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'|'", "'::='", "':-'", "'::'", "'..'", 
                     "'.'", "':'", "','", "';'", "'='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=>'", "'->'", "'{'", "'}'", "'['", "']'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "DOMAIN", "MODEL", "TRANSFORM", "SYSTEM", 
                      "INCLUDES", "EXTENDS", "OF", "RETURNS", "AT", "MACHINE", 
                      "IS", "NO", "NEW", "FUN", "INJ", "BIJ", "SUR", "ANY", 
                      "SUB", "COUNT", "ENSURES", "REQUIRES", "CONFORMS", 
                      "SOME", "ATLEAST", "ATMOST", "PARTIAL", "INITIALLY", 
                      "NEXT", "PROPERTY", "BOOT", "IMPORT", "FROM", "AS", 
                      "Id", "DECIMAL", "REAL", "FRAC", "STRING", "PIPE", 
                      "TYPEDEF", "RULE", "RENAMES", "RANGE", "DOT", "COLON", 
                      "COMMA", "SEMICOLON", "EQ", "NE", "LE", "GE", "LT", 
                      "GT", "PLUS", "MINUS", "MUL", "DIV", "MOD", "STRONGARROW", 
                      "WEAKARROW", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "LPAREN", "RPAREN", "WS" ]

    RULE_program = 0
    RULE_importModule = 1
    RULE_moduleList = 2
    RULE_module = 3
    RULE_modRefs = 4
    RULE_modRef = 5
    RULE_model = 6
    RULE_modelIntro = 7
    RULE_modelSig = 8
    RULE_domain = 9
    RULE_domainSig = 10
    RULE_domSentences = 11
    RULE_domSentence = 12
    RULE_typeDecl = 13
    RULE_unnBody = 14
    RULE_funcDecl = 15
    RULE_fields = 16
    RULE_field = 17
    RULE_unnElem = 18
    RULE_enumList = 19
    RULE_enumCnst = 20
    RULE_modelFactList = 21
    RULE_modelFact = 22
    RULE_formulaRule = 23
    RULE_setComprehension = 24
    RULE_disjunction = 25
    RULE_conjunction = 26
    RULE_constraint = 27
    RULE_term = 28
    RULE_terms = 29
    RULE_compositionalTerm = 30
    RULE_compositionalTermWithoutAlias = 31
    RULE_arithmeticTerm = 32
    RULE_atom = 33
    RULE_constant = 34
    RULE_binOp = 35
    RULE_relOp = 36
    RULE_funModifier = 37

    ruleNames =  [ "program", "importModule", "moduleList", "module", "modRefs", 
                   "modRef", "model", "modelIntro", "modelSig", "domain", 
                   "domainSig", "domSentences", "domSentence", "typeDecl", 
                   "unnBody", "funcDecl", "fields", "field", "unnElem", 
                   "enumList", "enumCnst", "modelFactList", "modelFact", 
                   "formulaRule", "setComprehension", "disjunction", "conjunction", 
                   "constraint", "term", "terms", "compositionalTerm", "compositionalTermWithoutAlias", 
                   "arithmeticTerm", "atom", "constant", "binOp", "relOp", 
                   "funModifier" ]

    EOF = Token.EOF
    DOMAIN=1
    MODEL=2
    TRANSFORM=3
    SYSTEM=4
    INCLUDES=5
    EXTENDS=6
    OF=7
    RETURNS=8
    AT=9
    MACHINE=10
    IS=11
    NO=12
    NEW=13
    FUN=14
    INJ=15
    BIJ=16
    SUR=17
    ANY=18
    SUB=19
    COUNT=20
    ENSURES=21
    REQUIRES=22
    CONFORMS=23
    SOME=24
    ATLEAST=25
    ATMOST=26
    PARTIAL=27
    INITIALLY=28
    NEXT=29
    PROPERTY=30
    BOOT=31
    IMPORT=32
    FROM=33
    AS=34
    Id=35
    DECIMAL=36
    REAL=37
    FRAC=38
    STRING=39
    PIPE=40
    TYPEDEF=41
    RULE=42
    RENAMES=43
    RANGE=44
    DOT=45
    COLON=46
    COMMA=47
    SEMICOLON=48
    EQ=49
    NE=50
    LE=51
    GE=52
    LT=53
    GT=54
    PLUS=55
    MINUS=56
    MUL=57
    DIV=58
    MOD=59
    STRONGARROW=60
    WEAKARROW=61
    LBRACE=62
    RBRACE=63
    LBRACKET=64
    RBRACKET=65
    LPAREN=66
    RPAREN=67
    WS=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FormulaParser.EOF, 0)

        def moduleList(self):
            return self.getTypedRuleContext(FormulaParser.ModuleListContext,0)


        def importModule(self):
            return self.getTypedRuleContext(FormulaParser.ImportModuleContext,0)


        def getRuleIndex(self):
            return FormulaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FormulaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(FormulaParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FormulaParser.IMPORT:
                    self.state = 77
                    self.importModule()


                self.state = 80
                self.moduleList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(FormulaParser.IMPORT, 0)

        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(FormulaParser.Id)
            else:
                return self.getToken(FormulaParser.Id, i)

        def FROM(self):
            return self.getToken(FormulaParser.FROM, 0)

        def STRING(self):
            return self.getToken(FormulaParser.STRING, 0)

        def AS(self):
            return self.getToken(FormulaParser.AS, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_importModule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportModule" ):
                listener.enterImportModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportModule" ):
                listener.exitImportModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportModule" ):
                return visitor.visitImportModule(self)
            else:
                return visitor.visitChildren(self)




    def importModule(self):

        localctx = FormulaParser.ImportModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importModule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(FormulaParser.IMPORT)
            self.state = 84
            self.match(FormulaParser.Id)
            self.state = 85
            self.match(FormulaParser.FROM)
            self.state = 86
            self.match(FormulaParser.STRING)
            self.state = 87
            self.match(FormulaParser.AS)
            self.state = 88
            self.match(FormulaParser.Id)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ModuleContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ModuleContext,i)


        def getRuleIndex(self):
            return FormulaParser.RULE_moduleList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleList" ):
                listener.enterModuleList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleList" ):
                listener.exitModuleList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleList" ):
                return visitor.visitModuleList(self)
            else:
                return visitor.visitChildren(self)




    def moduleList(self):

        localctx = FormulaParser.ModuleListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moduleList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FormulaParser.DOMAIN) | (1 << FormulaParser.MODEL) | (1 << FormulaParser.PARTIAL))) != 0):
                self.state = 90
                self.module()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(FormulaParser.DomainContext,0)


        def model(self):
            return self.getTypedRuleContext(FormulaParser.ModelContext,0)


        def getRuleIndex(self):
            return FormulaParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = FormulaParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_module)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FormulaParser.DOMAIN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.domain()
                pass
            elif token in [FormulaParser.MODEL, FormulaParser.PARTIAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.model()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModRefsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ModRefContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ModRefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FormulaParser.COMMA)
            else:
                return self.getToken(FormulaParser.COMMA, i)

        def getRuleIndex(self):
            return FormulaParser.RULE_modRefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModRefs" ):
                listener.enterModRefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModRefs" ):
                listener.exitModRefs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModRefs" ):
                return visitor.visitModRefs(self)
            else:
                return visitor.visitChildren(self)




    def modRefs(self):

        localctx = FormulaParser.ModRefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_modRefs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.modRef()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FormulaParser.COMMA:
                self.state = 101
                self.match(FormulaParser.COMMA)
                self.state = 102
                self.modRef()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModRefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(FormulaParser.Id)
            else:
                return self.getToken(FormulaParser.Id, i)

        def AT(self):
            return self.getToken(FormulaParser.AT, 0)

        def STRING(self):
            return self.getToken(FormulaParser.STRING, 0)

        def RENAMES(self):
            return self.getToken(FormulaParser.RENAMES, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_modRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModRef" ):
                listener.enterModRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModRef" ):
                listener.exitModRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModRef" ):
                return visitor.visitModRef(self)
            else:
                return visitor.visitChildren(self)




    def modRef(self):

        localctx = FormulaParser.ModRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_modRef)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(FormulaParser.Id)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(FormulaParser.Id)
                self.state = 110
                self.match(FormulaParser.AT)
                self.state = 111
                self.match(FormulaParser.STRING)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(FormulaParser.Id)
                self.state = 113
                self.match(FormulaParser.RENAMES)
                self.state = 114
                self.match(FormulaParser.Id)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.match(FormulaParser.Id)
                self.state = 116
                self.match(FormulaParser.RENAMES)
                self.state = 117
                self.match(FormulaParser.Id)
                self.state = 118
                self.match(FormulaParser.AT)
                self.state = 119
                self.match(FormulaParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelSig(self):
            return self.getTypedRuleContext(FormulaParser.ModelSigContext,0)


        def LBRACE(self):
            return self.getToken(FormulaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FormulaParser.RBRACE, 0)

        def modelFactList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ModelFactListContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ModelFactListContext,i)


        def getRuleIndex(self):
            return FormulaParser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = FormulaParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.modelSig()
            self.state = 123
            self.match(FormulaParser.LBRACE)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FormulaParser.Id:
                self.state = 124
                self.modelFactList()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(FormulaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelIntroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(FormulaParser.MODEL, 0)

        def Id(self):
            return self.getToken(FormulaParser.Id, 0)

        def OF(self):
            return self.getToken(FormulaParser.OF, 0)

        def modRef(self):
            return self.getTypedRuleContext(FormulaParser.ModRefContext,0)


        def PARTIAL(self):
            return self.getToken(FormulaParser.PARTIAL, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_modelIntro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelIntro" ):
                listener.enterModelIntro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelIntro" ):
                listener.exitModelIntro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelIntro" ):
                return visitor.visitModelIntro(self)
            else:
                return visitor.visitChildren(self)




    def modelIntro(self):

        localctx = FormulaParser.ModelIntroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_modelIntro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FormulaParser.PARTIAL:
                self.state = 132
                self.match(FormulaParser.PARTIAL)


            self.state = 135
            self.match(FormulaParser.MODEL)
            self.state = 136
            self.match(FormulaParser.Id)
            self.state = 137
            self.match(FormulaParser.OF)
            self.state = 138
            self.modRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelSigContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelIntro(self):
            return self.getTypedRuleContext(FormulaParser.ModelIntroContext,0)


        def modRefs(self):
            return self.getTypedRuleContext(FormulaParser.ModRefsContext,0)


        def INCLUDES(self):
            return self.getToken(FormulaParser.INCLUDES, 0)

        def EXTENDS(self):
            return self.getToken(FormulaParser.EXTENDS, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_modelSig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelSig" ):
                listener.enterModelSig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelSig" ):
                listener.exitModelSig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelSig" ):
                return visitor.visitModelSig(self)
            else:
                return visitor.visitChildren(self)




    def modelSig(self):

        localctx = FormulaParser.ModelSigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_modelSig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.modelIntro()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FormulaParser.INCLUDES or _la==FormulaParser.EXTENDS:
                self.state = 141
                _la = self._input.LA(1)
                if not(_la==FormulaParser.INCLUDES or _la==FormulaParser.EXTENDS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 142
                self.modRefs()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domainSig(self):
            return self.getTypedRuleContext(FormulaParser.DomainSigContext,0)


        def LBRACE(self):
            return self.getToken(FormulaParser.LBRACE, 0)

        def domSentences(self):
            return self.getTypedRuleContext(FormulaParser.DomSentencesContext,0)


        def RBRACE(self):
            return self.getToken(FormulaParser.RBRACE, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomain" ):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = FormulaParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_domain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.domainSig()
            self.state = 146
            self.match(FormulaParser.LBRACE)
            self.state = 147
            self.domSentences()
            self.state = 148
            self.match(FormulaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainSigContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOMAIN(self):
            return self.getToken(FormulaParser.DOMAIN, 0)

        def Id(self):
            return self.getToken(FormulaParser.Id, 0)

        def modRefs(self):
            return self.getTypedRuleContext(FormulaParser.ModRefsContext,0)


        def EXTENDS(self):
            return self.getToken(FormulaParser.EXTENDS, 0)

        def INCLUDES(self):
            return self.getToken(FormulaParser.INCLUDES, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_domainSig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainSig" ):
                listener.enterDomainSig(self)
